# ROI-HSK-

./: .env.example  .gitignore  ADDITIONS_SUMMARY.md  ARCHITECTURE_DIAGRAM.md  BUILD_GUIDE.md  COMPLETE_MANIFEST.md  COMPLETION_SUMMARY.md  CURRENT_STATUS.md  Cargo.toml  DEVELOPMENT_NOTES.md  Dockerfile  FEATURES_ADDED.md  FILE_INVENTORY.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  PLATFORM_SUMMARY.md  README.md  UNIQUE_FEATURES.md  docker-compose.yml  requirements.txt
.github/workflows/: ci.yml
admin-ui/: citizen-portal.yaml  dashboard.yaml
auth-system/: mfa.yaml  oauth.yaml  webauthn.yaml
backup-system/: backup-cronjob.yaml  pitr-recovery.yaml
blockchain-anchoring/bitcoin/: anchor.go
blockchain-anchoring/celestia/: anchor.rs
blockchain-anchoring/ethereum/: HSKTransparencyAnchor.sol
community/: CONTRIBUTING.md
compliance-docs/: GDPR_COMPLIANCE.md  SOC2_CONTROLS.md
crypto-advanced/: zero-knowledge.yaml
data-lifecycle/: data-export-api.yaml  gdpr-deletion.yaml  retention-policy.yaml
database-schemas/: consent_ledger.sql  transparency_log.sql
dev-tools/: cli-tool.yaml
docs/: API.md  ARCHITECTURE_DECISION_RECORDS.md  RUNBOOKS.md  architecture.puml
docs/api/: openapi.yaml
docs/archive/workflows/: ci-cd.yml.disabled  ci.yml.disabled  pr-checks.yml.disabled  release.yml.disabled
docs/operations/: OPERATIONS_RUNBOOK.md
docs/security/: SECURITY_RUNBOOK.md
examples/python-client/: hsk_client.py
examples/typescript-client/: hsk-client.ts  package.json  tsconfig.json
federation/: didcomm.yaml  verifiable-credentials.yaml
gitops/: argocd.yaml  flux.yaml
gitops/argocd/applications/: hsk-platform.yaml
gitops/argocd/projects/: hsk.yaml
gitops/flux/: gotk-components.yaml  image-policies.yaml
istio-config/: circuit-breakers.yaml  distributed-tracing.yaml  istio-install.yaml
k8s-deployments/: configmaps.yaml  database.yaml  monitoring.yaml  namespace.yaml  network-policies.yaml  rbac.yaml  transparency-log-deployment.yaml  verifier-deployment.yaml
k8s-deployments/canary/: flagger-canary.yaml
k8s-deployments/cost-optimization/: hpa.yaml  spot-instances.yaml
k8s-deployments/overlays/production/: database-patch.yaml  ingress-patch.yaml  kustomization.yaml  verifier-patch.yaml
k8s-deployments/overlays/staging/: database-patch.yaml  ingress-patch.yaml  kustomization.yaml  verifier-patch.yaml
k8s-tests/chaos/: chaos-experiments.yaml  network-partition.yaml
k8s-tests/kuttl/: kuttl-test.yaml
k8s-tests/kuttl/tests/01-health-check/: 00-assert.yaml  01-health-endpoint.yaml
k8s-tests/kuttl/tests/02-challenge-flow/: 00-create-challenge.yaml  01-submit-response.yaml
k8s-tests/kuttl/tests/03-certificate-verification/: 00-list-certificates.yaml  01-verify-certificate.yaml
k8s-tests/kuttl/tests/04-transparency-log/: 00-submit-to-log.yaml
ml-analytics/: anomaly-detection.yaml  ml_service.py  training_pipeline.py
mobile-sdks/: android-sdk.kt  flutter-sdk.dart  ios-sdk.swift  react-native-sdk.tsx
mobile-sdks/android/: build.gradle.kts
mobile-sdks/flutter/: pubspec.yaml
mobile-sdks/flutter/lib/: hsk_sdk.dart
mobile-sdks/flutter/lib/src/: api_client.dart  consent_manager.dart  (+5 more)
mobile-sdks/ios/: HSKSDK.podspec
mobile-sdks/react-native/ios/: HSKSDK.swift
mobile-sdks/react-native/src/: index.ts
monitoring-advanced/: cost-anomaly-detection.yaml  pagerduty-integration.yaml  status-page.yaml  synthetic-monitoring.yaml
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/dashboards/: consent-operations.json  cost-resources.json  security-events.json  system-health.json
monitoring/grafana/provisioning/: dashboards.yaml  datasources.yaml
multi-region/: cross-region-replication.yaml  global-lb.yaml
performance/: cdn-config.yaml  redis-cache.yaml
prototype-digital-identity/: Cargo.toml  Dockerfile  docker-compose.yml
prototype-digital-identity/src/: consent.rs  main.rs  models.rs  verification.rs
rate-limiter/: ddos-protection.yaml  rate-limit-config.yaml
runbooks/incident-response/playbooks/: data-corruption.md  security-breach.md  service-outage.md
rust-hs-verifier/: Cargo.toml  build.rs
rust-hs-verifier/benches/: verifier_benchmarks.rs
rust-hs-verifier/src/: adapter.rs  certificate.rs  challenge.rs  evaluate.rs  issuer.rs  lib.rs  main.rs  server.rs  transparency.rs  types.rs  verifiers.rs
rust-hs-verifier/tests/: fuzz_verifiers.rs  integration_test.rs
scripts/: backup.sh  canary-deploy.sh  chaos-test.sh  cost-report.sh  demo_flow.py  deploy-production.sh  restore.sh
services/differential-privacy/: Cargo.toml
services/differential-privacy/src/: lib.rs
services/federated-learning/: Cargo.toml
services/federated-learning/src/: lib.rs
services/formal-verification/: Cargo.toml
services/formal-verification/src/: lib.rs
services/homomorphic-crypto/: Cargo.toml
services/homomorphic-crypto/src/: lib.rs
services/hsk_api/: app.py  crypto.py  db.py  schemas.py
services/model-provenance/: Cargo.toml
services/model-provenance/src/: lib.rs
services/post-quantum-crypto/: Cargo.toml
services/post-quantum-crypto/src/: lib.rs
services/tee-attestation/: Cargo.toml
services/tee-attestation/src/: lib.rs
services/time-locked-deletion/: Cargo.toml
services/time-locked-deletion/src/: lib.rs
services/universal-consent-protocol/: Cargo.toml
services/universal-consent-protocol/src/: lib.rs
tests/: TEST_COVERAGE.md  load-test.js  run_all_tests.sh
tests/e2e/: test_user_journey.py
tests/integration/: test_api_smoke.py  test_full_deployment.py
tests/load/: load_test.js
tests/security/: penetration_tests.py
tests/unit/: test_backup_system.py  test_compliance.py  test_demo_flow.py  test_hsk_api.py  test_istio_config.py  test_multi_region.py  test_vault_integration.py
tests/validation/: check_secrets.sh  health_check.sh  validate-all.sh  validate_k8s.sh  validate_yaml.py  verify_deployment.sh
vault-integration/: secret-rotation.yaml  vault-database-config.yaml  vault-deployment.yaml  vault-policies.hcl
webhook-system/: webhook-service.yaml  webhook_service_impl.py
(+6 files in other folders)
