[workspace]
members = [
    "rust-hs-verifier",
    "prototype-digital-identity",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hskernel/hs-verifier"
authors = ["HSKernel Team <team@hskernel.dev>"]

[workspace.dependencies]
# Core dependencies
chrono = { version = "0.4.35", features = ["serde", "clock"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
tokio = { version = "1.36.0", features = ["full"] }

# Cryptography
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
sha2 = "0.10.8"
hex = "0.4.3"
base64 = "0.21.7"
rand = "0.7.3"
zeroize = { version = "1.7.0", features = ["zeroize_derive"] }

# Serialization
uuid = { version = "1.7.0", features = ["v4", "serde"] }

# HTTP
axum = { version = "0.7.4", features = ["macros"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
reqwest = { version = "0.11.26", features = ["json", "rustls-tls"], default-features = false }

# Database
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

# Testing
tokio-test = "0.4.3"
tempfile = "3.10.1"
