[package]
name = "hs-verifier"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "HSK Falsification Machine - Cryptographically verifiable violation certificates"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hskernel/hs-verifier"
readme = "README.md"
keywords = ["cryptography", "verification", "transparency", "ai-governance", "privacy"]
categories = ["cryptography", "command-line-utilities", "web-programming"]
authors = ["HSKernel Team <team@hskernel.dev>"]

[package.metadata.reproducible]
source-date-epoch = 1735689600
rust-toolchain = "1.75.0"
docker-image = "rust:1.75.0-slim-bullseye"

[package.metadata.deb]
maintainer = "HSKernel Team <team@hskernel.dev>"
copyright = "2025, HSKernel Team"
extended-description = "HSK Falsification Machine for cryptographically verifying AI system compliance"
section = "utils"
priority = "optional"
assets = [
    ["target/release/hs-verifier", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/hs-verifier/README", "644"],
]

[[bin]]
name = "hs-verifier"
path = "src/main.rs"

[lib]
name = "hs_verifier"
path = "src/lib.rs"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
panic = 'abort'
opt-level = 3
debug = false
incremental = false

[profile.release.build-override]
opt-level = 3

[profile.bench]
debug = true

[features]
default = ["server", "transparency"]
server = ["axum", "tower", "tower-http"]
transparency = ["reqwest"]
fuzzing = ["arbitrary"]
integration-tests = []

[dependencies]
# Core dependencies
chrono = { version = "0.4.35", features = ["serde", "clock"], default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }

# Cryptography
ed25519-dalek = { version = "1.0.1", features = ["serde"], default-features = false }
sha2 = { version = "0.10.8", default-features = false }
hex = { version = "0.4.3", default-features = false }
base64 = { version = "0.21.7", default-features = false, features = ["std"] }
rand = { version = "0.7.3", default-features = false, features = ["std"] }
zeroize = { version = "1.7.0", default-features = false, features = ["zeroize_derive"] }

# Serialization
serde_cbor = { version = "0.11.2", optional = true }
uuid = { version = "1.7.0", features = ["v4", "serde", "rng"] }

# CLI
clap = { version = "4.5.2", features = ["derive", "env", "cargo"] }

# HTTP Server (optional)
axum = { version = "0.7.4", features = ["macros"], optional = true }
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.5.2", features = ["cors", "trace", "compression-gzip"], optional = true }

# HTTP Client (optional)
reqwest = { version = "0.11.26", features = ["json", "rustls-tls"], default-features = false, optional = true }

# JWT handling
jsonwebtoken = { version = "9.2.0", default-features = false, features = ["use_pem"] }

# Fuzzing (optional)
arbitrary = { version = "1.3.2", features = ["derive"], optional = true }

# Async runtime
tokio = { version = "1.36.0", features = ["full"] }

# Database
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "chrono", "uuid", "migrate"], optional = true }

[dev-dependencies]
tokio-test = "0.4.3"
tempfile = "3.10.1"
assert_cmd = "2.0.14"
predicates = "3.1.0"
criterion = { version = "0.5.1", features = ["async_tokio"] }
proptest = "1.4.0"
mockall = "0.12.1"

[[bench]]
name = "verifier_benchmarks"
harness = false

