[package]
name = "hsk-differential-privacy"
version = "1.0.0"
edition = "2021"
authors = ["HSK Team <team@hsk.platform>"]
description = "Differential privacy with consent-aware noise and privacy budget tracking"
license = "AGPL-3.0"

[dependencies]
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "dp_benchmarks"
harness = false
