[package]
name = "hsk-model-provenance"
version = "1.0.0"
edition = "2021"
authors = ["HSK Team <team@hsk.platform>"]
description = "AI model provenance - training data lineage with Merkle proofs"
license = "AGPL-3.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "provenance_benchmarks"
harness = false
