[package]
name = "hsk-time-locked-deletion"
version = "1.0.0"
edition = "2021"
authors = ["HSK Team <team@hsk.platform>"]
description = "Time-locked cryptographic deletion using sequential hardness"
license = "AGPL-3.0"

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
rand = "0.8"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rayon = "1.8"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "timelock_benchmarks"
harness = false
